--- a/elderlycare.html
+++ b/elderlycare.html
@@ -17,14 +17,14 @@
         </a>
         <div class="container">
             <div class="header">
-                <h1>Elderly Care</h1>
+                <h1>Elderly Care </h1>
             </div>
             <div class="content">
                 <!-- First project -->
                 <div class="project">
                     <h2>The Golden Hero's</h2>
                     <div class="project-content">
-                        <img src="elderly1.jpeg" alt="Elderly Care">
+                        <img src="elderly1.jpg" alt="Elderly Care">
                         <p>
                             We organized an event aimed at supporting senior citizens in old-age homes and spreading awareness about elder abuse. The day was filled with engaging activities, starting with a lively dance session where seniors and volunteers joined together to celebrate.
                         </p>
@@ -80,7 +80,7 @@
                 <div class="project">
                     <h2>Sai Old age home                    </h2>
                     <div class="project-content">
-                        <img src="elderlyy6.jpg" alt="Elderly Care">
+                        <img src="elderly6.jpg" alt="Elderly Care">
                         <p>
                             We visited Sri Sai Old Age Home with the intention of spreading joy and providing support to the elderly residents. During our visit, we donated beds with cots to ensure their comfort and well-being. The time spent with these remarkable individuals was both heartwarming and enriching, as we engaged in conversations, shared stories, and enjoyed each other’s company. The elderly residents, whom we fondly referred to as "Super Humans," brought warmth and positivity to the event. We concluded the day by distributing snacks, ensuring the elderly felt appreciated and cared for.
                         </p>
