--- a/childcare.html
+++ b/childcare.html
@@ -11,7 +11,7 @@
         <img src="Logo.png" alt="Logo" class="logo">
     </a>
     <div class="header">
-        <h1>Our Projects</h1>
+        <h1>Childern Care</h1>
     </div>
     <div class="content">
         <!-- First project -->
