--- a/environment.html
+++ b/environment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Environment Care</title>
+    <title>Environmental Care</title>
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </a>
     <div class="container">
         <div class="header">
-            <h1>Envirnonment Care</h1>
+            <h1>Envirnonmental Care</h1>
         </div>
         <div class="content">
             <!-- First project -->
