--- a/disability.html
+++ b/disability.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disability Care</title>
+    <title>Disability Support </title>
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </a>
     <div class="container">
         <div class="header">
-            <h1>Disability</h1>
+            <h1>Disability Support </h1>
         </div>
         <div class="content">
             <!-- First project -->
