--- a/disaster.html
+++ b/disaster.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disaster Care</title>
+    <title>Disaster Relief </title>
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>Disaster</h1>
+            <h1>Disaster Relief</h1>
         </div>
         <div class="content">
             <!-- First project -->
