--- a/childcare.html
+++ b/childcare.html
@@ -78,7 +78,7 @@
         <div class="project">
             <h2>Sharadhe Pooje 2019</h2>
             <div class="project-content">
-                <img src="childcare7.jpg" alt="Child Care">
+                <img src="child7.jpg" alt="Child Care">
                 <p>
                     We had the privilege of being part of the Sharadha Pooje, marking our third consecutive year of volunteering at the event. Our team actively participated in organizing and assisting with the various rituals and activities. Volunteering at this event has become a meaningful tradition, allowing us to contribute to the celebration and share in the joy of the community.
                 </p>
