--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janmamithra</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="toggle.js"></script>
     
 </head>
 <body>
-   <!-- Header Section -->
-   <header>
+
+<header>
+    <div class="menu-toggle">&#9776;</div>
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
