--- a/elderlycare.html
+++ b/elderlycare.html
@@ -12,11 +12,12 @@
         <link rel="stylesheet" href="elderly.css">
     </head>
     <body>
-        <a href="projects.html">
-            <img src="Logo.png" alt="Logo" class="logo">
-        </a>
+        
         <div class="container">
             <div class="header">
+                <a href="projects.html">
+                    <img src="Logo.png" alt="Logo" class="logo">
+                </a>
                 <h1>Elderly Care </h1>
             </div>
             <div class="content">
@@ -82,7 +83,7 @@
                     <div class="project-content">
                         <img src="elderly6.jpg" alt="Elderly Care">
                         <p>
-                            We visited Sri Sai Old Age Home with the intention of spreading joy and providing support to the elderly residents. During our visit, we donated beds with cots to ensure their comfort and well-being. The time spent with these remarkable individuals was both heartwarming and enriching, as we engaged in conversations, shared stories, and enjoyed each other’s company. The elderly residents, whom we fondly referred to as "Super Humans," brought warmth and positivity to the event. We concluded the day by distributing snacks, ensuring the elderly felt appreciated and cared for.
+                            We visited Sri Sai Old Age Home with the intention of spreading joy and providing support to the elderly residents. During our visit, we donated beds with cots to ensure their comfort and well-being. The time spent with these remarkable individuals was both heartwarming and enriching, as we engaged in conversations, shared stories, and enjoyed each other’s company. The elderly residents, whom we fondly referred to as "Super Humans," brought warmth and positivity to the event.
                         </p>
                         </div>
                 </div>
