--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#honors">Achievers</a></li>
+            <li><a href="achievers.html">Achievers</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="#events" class="highlighted">Events</a></li>
         </ul>
