--- a/achievers.html
+++ b/achievers.html
@@ -7,37 +7,45 @@
     <link rel="stylesheet" href="achievers.css">
 </head>
 <body>
-    <!-- Honours Section -->
-    <section class="honours">
-        <div class="honours-header">
-            <h2>Honours</h2>
-            <p>A BIG SALUTE TO OUR CORONA WARRIORS</p>
-        </div>
+    <a href="index.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
+   <!-- Honours Section -->
+<section class="honours">
+    <div class="honours-header">
+        <h2>Honours</h2>
+        <p>A BIG SALUTE TO OUR CORONA WARRIORS</p>
+    </div>
 
-        <div class="honours-content">
-            <div class="honours-card">
-                <img src="achievers1.jpg" alt="Dr. Kishor">
-            </div>
-            <div class="honours-card">
-                <img src="achievers2.jpg" alt="Dr. Swathi">
-            </div>
-            <div class="honours-card">
-                <img src="achievers3.jpg" alt="Dr. Manasa">
-            </div>
-            <div class="honours-card">
-                <img src="achievers4.jpg" alt="Dr. Karthik">
-            </div>
+    <div class="honours-content">
+        <div class="honours-card">
+            <img src="achievers1.jpg" alt="Dr. Kishor">
+            <p>Dr. Kishor</p>
         </div>
+        <div class="honours-card">
+            <img src="achievers2.jpg" alt="Dr. Swathi">
+            <p>Dr. Swathi</p>
+        </div>
+        <div class="honours-card">
+            <img src="achievers3.jpg" alt="Dr. Manasa">
+            <p>Dr. Manasa</p>
+        </div>
+        <div class="honours-card">
+            <img src="achievers4.jpg" alt="Dr. Karthik">
+            <p>Dr. Karthik</p>
+        </div>
+    </div>
 
-        <div class="honours-description">
-            <p>
-                Our healthcare workers—nurses, doctors, and sanitation teams—are on the frontlines, 
-                risking their lives to combat COVID-19 and safeguard us all. We are grateful for the 
-                dedication of our Janmamithra heroes: Dr. Kishor, Dr. Swathi, Dr. Manasa, and Dr. Karthik. 
-                Thank you for your tireless efforts!
-            </p>
-        </div>
-    </section>
+    <div class="honours-description">
+        <p>
+            Our healthcare workers—nurses, doctors, and sanitation teams—are on the frontlines, 
+            risking their lives to combat COVID-19 and safeguard us all. We are grateful for the 
+            dedication of our Janmamithra heroes: Dr. Kishor, Dr. Swathi, Dr. Manasa, and Dr. Karthik. 
+            Thank you for your tireless efforts!
+        </p>
+    </div>
+</section>
+
 
     <!-- Monthly Inspirers Section -->
     <section class="inspirers">
