--- a/achievers.html
+++ b/achievers.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="achievers.css">
 </head>
 <body>
-    <a href="index.html">
-        <img src="Logo.png" alt="Logo" class="logo">
-    </a>
    <!-- Honours Section -->
 <section class="honours">
     <div class="honours-header">
@@ -56,15 +53,39 @@
         <div class="inspirers-content">
             <div class="inspirer-card">
                 <img src="inspirer1.jpg" alt="Inspirer 1">
-                <p>Name</p>
+                <p>Abhishek S</p>
             </div>
             <div class="inspirer-card">
                 <img src="inspirer2.jpg" alt="Inspirer 2">
-                <p>Name</p>
+                <p>Anil Kumar</p>
             </div>
             <div class="inspirer-card">
                 <img src="inspirer3.jpg" alt="Inspirer 3">
-                <p>Name</p>
+                <p>Anusha R</p>
+            </div>
+            <div class="inspirer-card">
+                <img src="inspirer4.jpg" alt="Inspirer 4">
+                <p>Grishma P</p>
+            </div>
+            <div class="inspirer-card">
+                <img src="inspirer5.jpg" alt="Inspirer 5">
+                <p>Kishor A</p>
+            </div>
+            <div class="inspirer-card">
+                <img src="inspirer6.jpg" alt="Inspirer 6">
+                <p>Meghna</p>
+            </div>
+            <div class="inspirer-card">
+                <img src="inspirer7.jpg" alt="Inspirer 7">
+                <p>Monisha D</p>
+            </div>
+            <div class="inspirer-card">
+                <img src="inspirer8.jpg" alt="Inspirer 8">
+                <p>Pooja S</p>
+            </div>
+            <div class="inspirer-card">
+                <img src="inspirer9.jpg" alt="Inspirer 9">
+                <p>Venkatesh R</p>
             </div>
         </div>
     </section>
