--- a/achievers.html
+++ b/achievers.html
@@ -54,12 +54,12 @@
             </div>
             <div class="inspirer-card">
                 <img src="inspirer2.jpg" alt="Inspirer 2">
-                <p class="name">Kishor A</p>
+                <p class="name">Anil Kumar</p>
                 <p class="role"></p>
             </div>
             <div class="inspirer-card">
                 <img src="inspirer3.jpg" alt="Inspirer 3">
-                <p class="name">Anil Kumar</p>
+                <p class="name">Anusha R</p>
                 <p class="role"></p>
             </div>
 
@@ -71,30 +71,30 @@
 
             <div class="inspirer-card">
                 <img src="inspirer5.jpg" alt="Inspirer 3">
-                <p class="name">Anusha R</p>
+                <p class="name">Kishor A</p>
                 <p class="role"></p>
             </div>
             <div class="inspirer-card">
                 <img src="inspirer6.jpg" alt="Inspirer 3">
-                <p class="name">Pooja S</p>
+                <p class="name">Meghna</p>
                 <p class="role"></p>
             </div>
 
             <div class="inspirer-card">
                 <img src="inspirer7.jpg" alt="Inspirer 3">
-                <p class="name">Grishma P</p>
+                <p class="name">Monisha D</p>
                 <p class="role"></p>
             </div>
 
             <div class="inspirer-card">
                 <img src="inspirer8.jpg" alt="Inspirer 3">
-                <p class="name">Venkatesh R</p>
+                <p class="name">Pooja S</p>
                 <p class="role"></p>
             </div>
 
             <div class="inspirer-card">
                 <img src="inspirer9.jpg" alt="Inspirer 3">
-                <p class="name">Monisha D</p>
+                <p class="name">Venkatesh R</p>
                 <p class="role"></p>
             </div>
 
