--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Janmamithra</title>
     <link rel="stylesheet" href="styles.css">
     <script src="toggle.js"></script>
-    
 </head>
 <body>
 
@@ -22,21 +21,25 @@
     </nav>
 </header>
 
-
 <!-- Main Content -->
 <main>
-    <!-- Hero Section -->
-<section class="hero" style="background-image: url('homebackground.jpg');">
-    <div class="logo">
-        <img src="Logo.png" alt="Janmamithra Logo">
-    </div>
-    <p>"Together We Turn Struggles Into Strength"</p>
-    <div class="buttons">
-        <a href="join.html" class="btn">Join</a>
-        <a href="donate.html" class="btn">Donate</a>
-    </div>
-</section>
-
+    <!-- Hero Section with Sliding Background Images -->
+    <section class="hero">
+        <div class="hero-slides">
+            <div class="hero-slide" style="background-image: url('homebackground.jpg');"></div>
+            <!-- <div class="hero-slide" style="background-image: url('homebackground2.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('homebackground3.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('homebackground4.jpg');"></div> -->
+        </div>
+        <div class="logo">
+            <img src="Logo.png" alt="Janmamithra Logo">
+        </div>
+        <p>"Together We Turn Struggles Into Strength"</p>
+        <div class="buttons">
+            <a href="join.html" class="btn">Join</a>
+            <a href="donate.html" class="btn">Donate</a>
+        </div>
+    </section>
 
     <!-- About Us Section -->
     <section class="about-us" id="home">
@@ -65,29 +68,30 @@
             </div>
         </div>
     </section>
-        <!-- Contact Section -->
-        <section class="contact-info" id="contact">
-            <h2>Contact Us</h2>
-            <div class="contact-links">
-                <p>📞 Mobile: <a href="tel:9611047143">9611047143</a></p>
-                <p>✉ Mail: <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
-                <p>📍 Address: <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
+
+    <!-- Contact Section -->
+    <section class="contact-info" id="contact">
+        <h2>Contact Us</h2>
+        <div class="contact-links">
+            <p>📞 Mobile: <a href="tel:9611047143">9611047143</a></p>
+            <p>✉ Mail: <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
+            <p>📍 Address: <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
+        </div>
+        <section class="social-media">
+            <div class="social-icons">
+                <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt="Instagram"></a>
+                <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"><img src="twitter.png" alt="Twitter"></a>
+                <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"><img src="facebook.png" alt="Facebook"></a>
+                <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"><img src="pinterest.png" alt="Pinterest"></a>
+                <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"><img src="youtube.png" alt="YouTube"></a>
             </div>
-            <section class="social-media">
-                <div class="social-icons">
-                    <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt=Instagram></a>
-                    <a href="https://x.com/intent/post?text=Home+-+https%3A%2F%2Fjanmamithra.org%2F+" target="_blank" class="icon twitter"><img src="twitter.png" alt=Twitter></a>
-                    <a href="https://www.facebook.com/share.php?u=https://janmamithra.org/" target="_blank" class="icon facebook"><img src="facebook.png" alt=Facebook></a>
-                    <a href="https://www.pinterest.com/pin/create/button/?url=https://janmamithra.org/&media=&description=" target="_blank" class="icon pinterest"><img src="pinterest.png" alt=Pinterest></a>
-                    <a href="https://www.youtube.com/channel/UC_cz7USjfaLgRp7EZA2DaXw" target="_blank" class="icon youtube"><img src="youtube.png" alt=Youtube></a>
-                </div>
-            </section>
         </section>
-    <!-- Social Media Section -->
-    
-    </main>
-    <footer>
-        <p>&copy; 2024 Janmamithra Trust. All Rights Reserved.</p>
-    </footer>
+    </section>
+
+</main>
+
+<footer>
+    <p>&copy; 2024 Janmamithra Trust. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
