--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     <section class="hero">
         <div class="hero-slides">
             <div class="hero-slide" style="background-image: url('homebackground.jpg');"></div>
-            <!-- <div class="hero-slide" style="background-image: url('homebackground2.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('homebackground2.jpg');"></div>
             <div class="hero-slide" style="background-image: url('homebackground3.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('homebackground4.jpg');"></div> -->
         </div>
         <div class="logo">
             <img src="Logo.png" alt="Janmamithra Logo">
@@ -40,6 +39,7 @@
             <a href="donate.html" class="btn">Donate</a>
         </div>
     </section>
+    
 
     <!-- About Us Section -->
     <section class="about-us" id="home">
