--- a/donate.html
+++ b/donate.html
@@ -10,7 +10,9 @@
   <!-- Header Section -->
   <header class="main-header">
     <div class="logo-container">
-      <img src="logo.png" alt="Logo" class="logo">
+      <a href="index.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
       <h1>Your Small Contribution Can Bring Big Smiles</h1>
     </div>
   </header>
