--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="hero-slide" style="background-image: url('homebackground.jpg');"></div>
             <div class="hero-slide" style="background-image: url('homebackground2.jpg');"></div>
             <div class="hero-slide" style="background-image: url('homebackground3.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('homebackground.jpg');"></div>
         </div>
         <div class="logo">
             <img src="Logo.png" alt="Janmamithra Logo">
