--- a/achievers.html
+++ b/achievers.html
@@ -9,7 +9,7 @@
 <body>
     <a href="index.html">
         <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="Logo.png" alt="Logo" class="logo">
         </div>        
     </a>
     <!-- Honours Section -->
