--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
 
     <!-- Contact Section -->
     <section class="contact-info" id="contact">
-        <h2>Contact Us</h2>
-        <div class="contact-links">
-            <p>📞 Mobile: <a href="tel:9611047143">9611047143</a></p>
-            <p>✉ Mail: <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
-            <p>📍 Address: <a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <div class="contact-links">
+                <p><strong>📞 Mobile:</strong> <a href="tel:9611047143"></a>9611047143 </p>
+                <p><strong>✉ Email:</strong> <a href="mailto:janmamithra@gmail.com">janmamithra@gmail.com</a></p>
+                <p><strong>📍Address:</strong><a href="https://www.google.com/maps?q=Nagarbhavi,+Bangalore" target="_blank">Nagarbhavi, Bangalore</a></p>
+            </div>
         </div>
+        
         <section class="social-media">
             <div class="social-icons">
                 <a href="https://www.instagram.com/janmamithra_trust_regd/" target="_blank" class="icon instagram"><img src="instagram.png" alt="Instagram"></a>
@@ -92,7 +95,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Janmamithra Trust. All Rights Reserved.</p>
+    <p>&copy; 2024 Janmamithra Trust R </p>
 </footer>
 </body>
 </html>
