--- a/donate.html
+++ b/donate.html
@@ -20,18 +20,29 @@
   <!-- Donation Form Section -->
   <div class="donation-container">
     <div class="donation-form">
-      <form>
+      <form id="donationForm" action="donate_script.php" method="post">
+        <!-- Personal Information -->
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Your full name" required>
+
+        <label for="mobile">Mobile:</label>
+        <input type="tel" id="mobile" name="mobile" placeholder="Your mobile number" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Your email address" required>
+
         <label for="donate">What do you want to donate?</label>
-        <select id="donate" name="donate" required>
+        <select id="donate" name="type" required>
           <option value="" disabled selected>Select an option</option>
           <option value="money">Money</option>
           <option value="clothes">Clothes</option>
           <option value="food">Food</option>
           <option value="other">Other</option>
         </select>
-        
+
         <!-- Dynamic Content Section -->
         <div id="dynamic-content"></div>
+        <button type="submit">Submit</button>
       </form>
     </div>
   </div>
