--- a/join.html
+++ b/join.html
@@ -11,7 +11,7 @@
         <h1>Welcome to Janmamithra Trust</h1>
         <p>"Be the change—unite to inspire hope, create impact, and shape a better tomorrow."</p>
     </div>
-    <form>
+    <form action="process_form.php" method="POST" enctype="multipart/form-data">
         <p>Join us in creating a better future by filling this form!</p>
         <br>
         <div class="form-group">
