--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
         <h1>OUR PROJECTS</h1>
     </div>
 
-    <div class="images">
+<div class="images">
         <a href="elderlycare.html" class="project elderlycare">
             <img src="elderly.jpg" alt="Elderly Care Project">
             <div class="bottom-text">Elderly Care</div>
@@ -38,7 +38,7 @@
             <div class="bottom-text">Disability Assistance</div>
         </a>
         <a href="environment.html" class="project environment">
-            <img src="environment.jpg" alt="Environmental Care Project">
+            <img src="environmentcare1.jpg" alt="Environmental Care Project">
             <div class="bottom-text">Environmental Care</div>
         </a>
         <a href="health.html" class="project health">
