--- a/career.html
+++ b/career.html
@@ -22,7 +22,8 @@
                 <div class="project-content">
                     <img src="career.jpg" alt="Career Care">
                     <p>
-                        
+                     Unemployed candidates from any field can get current updates on job opportunities as per their requirements to build a career. They can search for jobs based on their skills, qualifications, and preferences while staying informed about the latest openings. Guidance on resume building and interview preparation is also provided to enhance their chances of success. 
+
                     </p>
                 </div>
             </div>
