--- a/environment.html
+++ b/environment.html
@@ -20,7 +20,7 @@
             <div class="project">
                 <h2>A Day For Environment                </h2>
                 <div class="project-content">
-                    <img src="environmentcare1.jpg" alt="Environment Care">
+                    <img src="environment1.jpg" alt="Environment Care">
                     <p>
                         Another successful event by our team, Janmamithra Trust, on 10th January 2021! We worked to remove posters, stapled pins, and nails from trees in Vijayanagar, Bangalore. This initiative aimed to protect trees and promote environmental awareness. It was inspiring to see our members come together for such a noble cause. Kudos to everyone who participated and made this event a success!
                     </p>
