--- a/index.html
+++ b/index.html
@@ -94,7 +94,15 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Janmamithra Trust R </p>
+    <p>&REG; 2024 Janmamithra Trust </p>
+    <div class="info">
+        <h3>
+            Presented By:CODESPHERE NEXUS
+        </h3>
+    </div>
+    <div class="codesphere">
+        <img src="codesphere.png"alt="codesphere">
+    </div>
 </footer>
 </body>
 </html>
