--- a/achievers.html
+++ b/achievers.html
@@ -42,7 +42,7 @@
     <!-- Monthly Inspirers Section -->
     <section class="inspirers">
         <div class="inspirers-header">
-            <h2 style="width: 350px;">Service Inspirers</h2>
+            <h2>Service Inspirers</h2>
         </div>
 
         <div class="inspirers-content">
