--- a/elderlycare.html
+++ b/elderlycare.html
@@ -27,7 +27,7 @@
                     <div class="project-content">
                         <img src="elderly1.jpg" alt="Elderly Care">
                         <p>
-                            We organized an event aimed at supporting senior citizens in old-age homes and spreading awareness about elder abuse. The day was filled with engaging activities, starting with a lively dance session where seniors and volunteers joined together to celebrate.
+                           We organized an event to support senior citizens in old age homes and spread awareness against elder abuse. The day was filled with joy as we danced with them, conducted a ramp walk where both senior citizens and volunteers participated, and shared heartfelt moments. A delicious lunch was arranged to conclude the event, making it a memorable and impactful day.
                         </p>
                     </div>
                 </div>
