--- a/projects.html
+++ b/projects.html
@@ -17,39 +17,39 @@
     </div>
 
 <div class="images">
-        <a href="elderlycare.html" class="project elderlycare">
+        <a href="elderlycare.html?type_id=1" class="project elderlycare">
             <img src="elderly.jpg" alt="Elderly Care Project">
             <div class="bottom-text">Elderly Care</div>
         </a>
-        <a href="childcare.html" class="project child">
+        <a href="childcare.html?type_id=3" class="project child">
             <img src="child.jpg" alt="Child Care Project">
             <div class="bottom-text">Child Care</div>
         </a>
-        <a href="educationcare.html" class="project education">
+        <a href="educationcare.html?type_id=3" class="project education">
             <img src="education.jpg" alt="Education Project">
             <div class="bottom-text">Education</div>
         </a>
-        <a href="disaster.html" class="project disaster">
+        <a href="disaster.html?type_id=4" class="project disaster">
             <img src="disaster.jpg" alt="Disaster Relief Project">
             <div class="bottom-text">Disaster Relief</div>
         </a>
-        <a href="disability.html" class="project disabled">
+        <a href="disability.html?type_id=5" class="project disabled">
             <img src="disable2.jpg" alt="Disability Assistance Project">
             <div class="bottom-text">Disability Assistance</div>
         </a>
-        <a href="environment.html" class="project environment">
+        <a href="environment.html?type_id=6" class="project environment">
             <img src="environmentcare1.jpg" alt="Environmental Care Project">
             <div class="bottom-text">Environmental Care</div>
         </a>
-        <a href="health.html" class="project health">
+        <a href="health.html?type_id=7" class="project health">
             <img src="health.jpg" alt="Health and Wellness Project">
             <div class="bottom-text">Health and Wellness</div>
         </a>
-        <a href="soverignsupport.html" class="project Soverign">
+        <a href="soverignsupport.html?type_id=8" class="project Soverign">
             <img src="soverignsupport.jpg" alt="Sovereign Support Project">
             <div class="bottom-text">Sovereign Support</div>
         </a>
-        <a href="career.html" class="project Career">
+        <a href="career.html?type_id=9" class="project Career">
             <img src="career.jpg" alt="Career Wing">
             <div class="bottom-text">Career Wing</div>
         </a>
